added data transfer functionality

--- a/src/main/resources/application-1.properties
+++ b/src/main/resources/application-1.properties
@@ -7,3 +7,5 @@ zookeeper.worker.service.name = worker-service
 zookeeper.address = 127.0.0.1:2181
 zookeeper.master.id = f47ac10b-58cc-4372-a567-0e02b2c3d477
 server.port=8091
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
